src/objects/WB_Log__c.object
<CustomObject>
    <description>Log para los servicios web.</description>
    <fields>
        <fullName>WB_Mensaje__c</fullName>
        <description>Mensaje de Error o Éxito.</description>
        <label>Mensaje</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WB_Rta__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Respuesta Boolean.</description>
        <label>Rta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WB_Servicio_Web__c</fullName>
        <label>Servicio Web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>WB_Rta__c</columns>
        <columns>WB_Servicio_Web__c</columns>
        <columns>WB_Mensaje__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Log</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>